--- a/InnovateNSUT-master/appointment.html
+++ b/InnovateNSUT-master/appointment.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/9caaa1478d.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>HelTH+</title>
@@ -63,17 +63,13 @@
                       href="#collapse1"
                       data-toggle="collapse"
                       data-parent="#accordion"
-                      >Question One</a
+                      >Is there a vaccine for covid 19?</a
                     >
                   </h5>
                 </div>
                 <div id="collapse1" class="collapse">
                   <div class="card-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Magni provident eaque voluptates corrupti eum impedit, sequi
-                    ullam in odit, ad illo fuga autem eveniet non sunt
-                    voluptatibus hic quasi esse? Consectetur dolor maiores earum
-                    iusto, fuga dolore in quaerat omnis.
+                    Yes there are now several vaccines that are in use. The first mass vaccination programme started in early December 2020 and as of and as of 15 February 2021, 175.3 million vaccine doses have been administered. At least 7 different vaccines (3 platforms) have been administered.
                   </div>
                 </div>
               </div>
@@ -84,17 +80,13 @@
                       href="#collapse2"
                       data-toggle="collapse"
                       data-parent="#accordion"
-                      >Question Two</a
+                      >Will covid 19 vaccine provide long term protection?</a
                     >
                   </h5>
                 </div>
                 <div id="collapse2" class="collapse">
                   <div class="card-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Magni provident eaque voluptates corrupti eum impedit, sequi
-                    ullam in odit, ad illo fuga autem eveniet non sunt
-                    voluptatibus hic quasi esse? Consectetur dolor maiores earum
-                    iusto, fuga dolore in quaerat omnis.
+                    Because COVID vaccines have only been developed in the past months, it’s too early to know the duration of protection of COVID-19 vaccines. Research is ongoing to answer this question. However, it’s encouraging that available data suggest that most people who recover from COVID-19 develop an immune response that provides at least some period of protection against reinfection – although we’re still learning how strong this protection is, and how long it lasts.
                   </div>
                 </div>
               </div>
@@ -105,17 +97,13 @@
                       href="#collapse3"
                       data-toggle="collapse"
                       data-parent="#accordion"
-                      >Question Three</a
+                      >How quickly will vaccine stop the pandemic?</a
                     >
                   </h5>
                 </div>
                 <div id="collapse3" class="collapse">
                   <div class="card-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Magni provident eaque voluptates corrupti eum impedit, sequi
-                    ullam in odit, ad illo fuga autem eveniet non sunt
-                    voluptatibus hic quasi esse? Consectetur dolor maiores earum
-                    iusto, fuga dolore in quaerat omnis.
+                    The impact of COVID-19 vaccines on the pandemic will depend on several factors. These include the effectiveness of the vaccines; how quickly they are approved, manufactured, and delivered; the possible development of other variants and how many people get vaccinated
                   </div>
                 </div>
               </div>
@@ -126,17 +114,13 @@
                       href="#collapse4"
                       data-toggle="collapse"
                       data-parent="#accordion"
-                      >Question Four</a
+                      >Will other vaccines prevent covid 19?</a
                     >
                   </h5>
                 </div>
                 <div id="collapse4" class="collapse">
                   <div class="card-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Magni provident eaque voluptates corrupti eum impedit, sequi
-                    ullam in odit, ad illo fuga autem eveniet non sunt
-                    voluptatibus hic quasi esse? Consectetur dolor maiores earum
-                    iusto, fuga dolore in quaerat omnis.
+                    Currently, there is no evidence that any other vaccines, apart from those specifically designed for the SARS-Cov-2 virus,  will protect against COVID-19.
                   </div>
                 </div>
               </div>
@@ -147,17 +131,13 @@
                       href="#collapse5"
                       data-toggle="collapse"
                       data-parent="#accordion"
-                      >Question Five</a
+                      >What are benefits of getting vaccinated?</a
                     >
                   </h5>
                 </div>
                 <div id="collapse5" class="collapse">
                   <div class="card-body">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Magni provident eaque voluptates corrupti eum impedit, sequi
-                    ullam in odit, ad illo fuga autem eveniet non sunt
-                    voluptatibus hic quasi esse? Consectetur dolor maiores earum
-                    iusto, fuga dolore in quaerat omnis.
+                    The COVID-19 vaccines produce protection against the disease, as a result of developing an immune response to the SARS-Cov-2 virus.  Developing immunity through vaccination means there is a reduced risk of developing the  illness and its consequences. This immunity helps you fight the virus if exposed. Getting vaccinated may also protect people around you, because if you are protected from getting infected and from disease, you are less likely to infect someone else.
                   </div>
                 </div>
               </div>
@@ -326,7 +306,7 @@
                   id="name"
                   name="name"
                   type="text"
-                  placeholder="Username"
+                  placeholder="Name"
                   class="form-control"
                 />
                 <div class="invalid-feedback">Invalid Name</div>
