--- a/InnovateNSUT-master/contact.html
+++ b/InnovateNSUT-master/contact.html
@@ -139,14 +139,13 @@
             <div class="card text-center mb-5 mb-mob">
               <div class="card-body">
                 <img
-                  src="img/person2.jpg"
+                  src="img/ayush.jpg"
                   class="img-fluid rounded-circle w-50 mb-3"
                 />
                 <h3>Ayush Purohit</h3>
-                <h5 class="text-muted">Lorem, ipsum.</h5>
+                <h5 class="text-muted">Lead Backend Developer</h5>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
-                  voluptas? Exercitationem repellat repudiandae quam adipisci.
+                  Myself a full stack developer, a cybersecurity enthusiast and a guitarist, currently a B.Tech fresher at NSUT.
                 </p>
                 <div class="d-flex justify-content-center">
                   <div class="p-4">
@@ -292,7 +291,7 @@
                   class="img-fluid rounded-circle w-50 mb-3"
                 />
                 <h3>Pushp Jain</h3>
-                <h5 class="text-muted">UI Designer, Team Manager</h5>
+                <h5 class="text-muted">User Interface Designer, Team Manager</h5>
                 <p>
                   An Android Developer, a UI designer and a Btech fresher @ NSUT,
                   Love to develop &#128151 and Design &#128187
