--- a/InnovateNSUT-master/index.html
+++ b/InnovateNSUT-master/index.html
@@ -22,7 +22,7 @@
     />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" />
     <title>HelTH+</title>
   </head>
   <body>
