--- a/InnovateNSUT-master/login.html
+++ b/InnovateNSUT-master/login.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/login.css" />
-  </head>
+  </<link rel="shortcut icon" type="image/x-icon" href="https://media.flaticon.com/dist/min/img/favicon.ico" /></head>
 
   <body>
     
@@ -21,16 +21,12 @@
         <div class="form-container sign-up-container">
           <form action="/register" method="POST">
             <h1>Create Account</h1>
-            <div class="social-container">
-              <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" class="social"
-                ><i class="fab fa-google-plus-g"></i
-              ></a>
-              <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <span>or use your email for registration</span>
+            
+            <span>Use your email for registration</span>
             <input type="text" placeholder="Name" name="name" />
             <input type="email" placeholder="Email" name="username" />
+            <input type="age" placeholder="Age" name="age" />
+            <input type="gender" placeholder="Gender" name="gender" />
             <input type="password" placeholder="Password" name="password" />
             <button>Sign Up</button>
           </form>
